--- a/app/src/main/res/layout/words_list.xml
+++ b/app/src/main/res/layout/words_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".WordsList">
 
     <ListView
         android:id="@+id/listView"
@@ -14,10 +14,11 @@
         android:layout_marginTop="51dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="51dp"
-        android:background="#CFADAD"
+        android:background="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.48000002" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
